--- a/todo
+++ b/todo
@@ -5,4 +5,5 @@
 - Faire le &url claim <vanity> (Owner)
 - Faire un vrai restart (Settings)
 - Ajouter le twitch à la db
-- Finir le système de reming (Utiles)
+- Finir le système de remind (Utiles)
+- Ajouter mon systeme de commande payment perso avec Object
