--- a/todo
+++ b/todo
@@ -1,5 +1,5 @@
-- amélioration du sync (Utiles / Crowbot)
-- fix du platform (Utiles)
+- Amélioration du sync (Utiles / Crowbot)
+- Fix de la commande platform (Utiles)
 - Double commande react (Fun / Utiles)
 - Commande pour paiement (Owner)
 - Faire le &url claim <vanity> (Owner)
@@ -7,3 +7,6 @@
 - Ajouter le twitch à la db
 - Finir le système de remind (Utiles)
 - Ajouter mon systeme de commande payment perso avec Object
+- Nitro Sniper a fix
+- Faire en sorte que les owners peuvent utiliser les commandes premium ou faire un truc pour que si t'es owner tu as le premium en lifetime obligatoirement et user n'est  plus owner il le perd.
+- Fix les noms sur les logs et la photo des webhook
