--- a/todo
+++ b/todo
@@ -1,4 +1,18 @@
-- multispoof
+- multispoof (owner)
 - change token sur linux (bun)
-- backup stickers
-- auto bump
+- backup stickers (suggestion)
+- backup roles
+- backup templates
+- backup list
+- backup info
+- backup delete
+- backup clear
+- auto bump (suggestion)
+- clear all dans les panels
+- paypal à mettre dans les panels
+- ltc à mettre dans les panels
+- surprise à mettre dans les panels
+- vip <code> à mettre dans les panels
+- muteall à mettre dans les panels
+- unmuteall à mettre dans les panels
+- commandes raid a transferer du panel owner a un autre (cmds vip)
